--- a/roles/openldap/templates/schema_conv.conf.j2
+++ b/roles/openldap/templates/schema_conv.conf.j2
@@ -1,6 +1,6 @@
-include {{schema_location}}/core.schema
-include {{schema_location}}/cosine.schema
-include {{schema_location}}/inetorgperson.schema
-include {{schema_location}}/nis.schema
-include {{schema_location}}/misc.schema
-include {{schema_location}}/mail.schema
+include {{schema.location}}/core.schema
+include {{schema.location}}/cosine.schema
+include {{schema.location}}/inetorgperson.schema
+include {{schema.location}}/nis.schema
+include {{schema.location}}/misc.schema
+include {{schema.location}}/mail.schema
