--- a/roles/openldap/templates/ldif/entries.ldif.j2
+++ b/roles/openldap/templates/ldif/entries.ldif.j2
@@ -1,7 +1,7 @@
 dn:  olcDatabase={1}hdb,cn=config
 changetype: modify
 replace: olcRootDN
-olcRootDN: {{}}
+olcRootDN: {{dev.ldap.basedn}}
 
 # Organization for Example Corporation
 dn: dc=noonipoony,dc=com
